--- a/src/components/WebEarthF1.less
+++ b/src/components/WebEarthF1.less
@@ -630,3 +630,15 @@
 .hello .toolsItem > div ul li:not(:last-child) {
   border-bottom: 1px solid #eee;
 }
+
+/*修改提示框确定按钮的背景色为主色*/
+.el-button--primary{
+  color: #fff;
+  background-color: #6850d8;
+  border-color: #6850d8;
+}
+
+.el-button--primary:hover{
+  background-color: mediumpurple ;
+  border-color: mediumpurple;
+}
