--- a/src/components/WebEarthF1.less
+++ b/src/components/WebEarthF1.less
@@ -36,7 +36,7 @@
 
       /deep/ .el-input-group__append {
         height: 45px;
-        background-color: #6850d8;
+        background-color: #81d8d0;
         border: none !important;
 
         /deep/ .el-icon-search {
@@ -284,7 +284,7 @@
 
     .pointLong,
     .poitLat {
-      color: #3385ff;
+      color: #81d8d0;
     }
   }
 }
@@ -332,7 +332,7 @@
         :active,
         :hover,
         :focus {
-          color: #6850d8 !important;
+          color: #81d8d0 !important;
         }
       }
 
@@ -377,7 +377,7 @@
     .change-color:active,
     .change-color:hover,
     .change-color:focus {
-      color: #6850d8 !important;
+      color: #81d8d0 !important;
     }
 
     /deep/ .ivu-dropdown-item {
@@ -420,7 +420,7 @@
 
           ul {
             li:hover {
-              color: #3385ff;
+              color: #81d8d0;
             }
           }
         }
@@ -429,11 +429,11 @@
 
       li:hover {
         span {
-          color: #3385ff;
+          color: #81d8d0;
         }
 
         i {
-          color: #3385ff
+          color: #81d8d0;
         }
       }
 
@@ -474,7 +474,7 @@
     }
 
     a:hover {
-      color: #2d8cf0;
+      color: #81d8d0;
     }
   }
 
@@ -487,14 +487,13 @@
     background: #fff;
     width: 400px;
     padding: 10px 20px 20px 20px;
-    border-top: 5px solid #6850d8;
+    border-top: 5px solid #81d8d0;
 
     .editTitle {
       height: 40px;
       line-height: 30px;
       text-align: left;
-      color: #6850d8;
-      font-weight: 600;
+      color: #81d8d0;
       font-size: 18px;
       margin-bottom: 10px;
     }
@@ -624,7 +623,7 @@
 
 .hello .hover-show {
   font-size: 12px;
-  color: #6850d8;
+  color: #81d8d0;
 }
 
 .hello .toolsItem > div ul li:not(:last-child) {
@@ -634,11 +633,28 @@
 /*修改提示框确定按钮的背景色为主色*/
 .el-button--primary{
   color: #fff;
-  background-color: #6850d8;
-  border-color: #6850d8;
+  background-color: #81d8d0;
+  border-color: #81d8d0;
 }
 
 .el-button--primary:hover{
-  background-color: mediumpurple ;
-  border-color: mediumpurple;
+  background-color: #AFD8CC ;
+  border-color: #AFD8CC;
+}
+/*修改取消按钮的颜色*/
+
+.el-button:hover{
+  background-color: #AFD8CC ;
+  border-color: #AFD8CC;
+  color: #fff;
+}
+
+/*修改el-button之间的margin*/
+.el-button+.el-button{
+  margin-left: 200px;
+}
+
+/*按钮设置为居中格式*/
+.el-dialog__footer{
+  text-align: center;
 }
