changed the location of box

--- a/src/css/WebEarthF1.css
+++ b/src/css/WebEarthF1.css
@@ -228,7 +228,8 @@
 .hello .operation {
   position: absolute;
   top: 20px;
-  right: 20px;
+  /*修改距离右边栏的距离*/
+  right: 90px;
   height: 45px;
   border-radius: 5px;
   line-height: 45px;
