--- a/src/css/WebEarthF1.css
+++ b/src/css/WebEarthF1.css
@@ -169,24 +169,10 @@
   border: 1px solid #dbdee2;
   padding: 5px;
   text-align: center;
-  /*修改新闻链接列表中的a颜色*/
-  /*!*访问连接后链接变色，但是并没有反应，可能涉及到链接是伪链接的问题，浏览器没有产生浏览记录*!*/
 }
 .hello .table tr td a {
   padding: 0 !important;
   text-decoration: none;
-}
-.hello .table tr td a:link {
-  color: #515a6e;
-}
-.hello .table tr td a:visited {
-  color: #81d8d0;
-}
-.hello .table tr td a:hover {
-  color: #81d8d0;
-}
-.hello .table tr td a:active {
-  color: #81d8d0;
 }
 .hello #cesiumContainer {
   height: 100%;
@@ -277,6 +263,7 @@
   padding: 0 15px;
   color: #5f6477;
   text-decoration: none;
+  /*调整伪类的顺序*/
 }
 .hello .operation .operation-item a .right-icon {
   margin-right: 3px;
@@ -284,8 +271,9 @@
   font-size: 16px;
   padding-right: 5px;
 }
-.hello .operation .operation-item a :active,
+.hello .operation .operation-item a :visited,
 .hello .operation .operation-item a :hover,
+.hello .operation .operation-item a :active,
 .hello .operation .operation-item a :focus {
   color: #81d8d0 !important;
 }
