表头文字修改

--- a/src/components/WebEarthF1.less
+++ b/src/components/WebEarthF1.less
@@ -202,18 +202,18 @@
   }
 
   .table {
-    border: 1px solid #dbdee2;
+    border: 1px solid #c0c0c0;
     border-collapse: collapse;
     width: 100%;
 
     tr th {
-      border: 1px solid #dbdee2;
+      border: 1px solid #c0c0c0;
       padding: 8px;
       text-align: center;
     }
 
     tr td {
-      border: 1px solid #dbdee2;
+      border: 1px solid #c0c0c0;
       padding: 5px;
       text-align: center;
 
@@ -631,6 +631,7 @@
   border-bottom: 1px solid #eee;
 }
 
+//提示框按钮的样式，这些可以注释掉
 /*修改提示框确定按钮的背景色为主色*/
 .el-button--primary{
   color: #fff;
@@ -680,5 +681,8 @@
 /*新闻图片样式*/
 .news-image{
   text-align: center;
+  //图片大小自适应
+  width: 100%;
+  height: auto;
 }
 
