表格样式等

--- a/src/components/WebEarthF1.less
+++ b/src/components/WebEarthF1.less
@@ -201,23 +201,25 @@
     }
   }
 
+  //列表分割線顏色設置
   .table {
-    border: 1px solid #dbdee2;
+    border: 1px solid #515a6e;
     border-collapse: collapse;
     width: 100%;
 
     tr th {
-      border: 1px solid #dbdee2;
+      border: 1px solid #515a6e;
       padding: 8px;
       text-align: center;
     }
 
     tr td {
-      border: 1px solid #dbdee2;
+      border: 1px solid #515a6e;
       padding: 5px;
       text-align: center;
 
       a {
+        //最高优先级
         padding: 0 !important;
         text-decoration: none;
       }
