返回按钮改为关闭按钮

--- a/src/css/WebEarthF1.css
+++ b/src/css/WebEarthF1.css
@@ -156,17 +156,25 @@
   top: -53px;
 }
 .hello .table {
-  border: 1px solid #515a6e;
+  border: none;
   border-collapse: collapse;
   width: 100%;
 }
 .hello .table tr th {
   border: 1px solid #515a6e;
+  border-bottom-width: thin;
+  border-right-style: none;
+  border-left-style: none;
+  border-top-style: none;
   padding: 8px;
   text-align: center;
 }
 .hello .table tr td {
   border: 1px solid #515a6e;
+  border-bottom-width: thin;
+  border-right-style: none;
+  border-left-style: none;
+  border-top-style: none;
   padding: 5px;
   text-align: center;
 }
