--- a/src/components/WebEarthF1.less
+++ b/src/components/WebEarthF1.less
@@ -201,20 +201,29 @@
     }
   }
 
-  //列表分割線顏色設置
+  //列表分割线设置
   .table {
-    border: 1px solid #515a6e;
+    border: none;
     border-collapse: collapse;
     width: 100%;
 
     tr th {
       border: 1px solid #515a6e;
+      border-bottom-width: thin;
+      border-right-style: none;
+      border-left-style: none;
+      border-top-style: none;
       padding: 8px;
       text-align: center;
     }
 
     tr td {
+      //border: 1px solid #515a6e;
       border: 1px solid #515a6e;
+      border-bottom-width: thin;
+      border-right-style: none;
+      border-left-style: none;
+      border-top-style: none;
       padding: 5px;
       text-align: center;
 
