修改新闻标题顶部间距，避免标题与按钮重叠

--- a/src/components/WebEarthF1.less
+++ b/src/components/WebEarthF1.less
@@ -665,6 +665,14 @@
 .el-button+.el-button{
   margin-left: 200px;
 }
+/*
+新闻详细界面element组件样式修改
+ */
+/*修改标题与小标题的距离*/
+.el-dialog__body {
+  margin: 0;
+  padding: 20px 20px;
+}
 
 /*按钮设置为居中格式*/
 .el-dialog__footer{
