--- a/src/components/WebEarthF1.css
+++ b/src/components/WebEarthF1.css
@@ -156,17 +156,25 @@
   top: -53px;
 }
 .hello .table {
-  border: 1px solid #dbdee2;
+  border: none;
   border-collapse: collapse;
   width: 100%;
 }
 .hello .table tr th {
-  border: 1px solid #dbdee2;
+  border: 1px solid #515a6e;
+  border-bottom-width: thin;
+  border-right-style: none;
+  border-left-style: none;
+  border-top-style: none;
   padding: 8px;
   text-align: center;
 }
 .hello .table tr td {
-  border: 1px solid #dbdee2;
+  border: 1px solid #515a6e;
+  border-bottom-width: thin;
+  border-right-style: none;
+  border-left-style: none;
+  border-top-style: none;
   padding: 5px;
   text-align: center;
 }
@@ -514,6 +522,14 @@
 /*修改el-button之间的margin*/
 .el-button + .el-button {
   margin-left: 200px;
+}
+/*
+新闻详细界面element组件样式修改
+ */
+/*修改标题与小标题的距离*/
+.el-dialog__body {
+  margin: 0;
+  padding: 20px 20px;
 }
 /*按钮设置为居中格式*/
 .el-dialog__footer {
